@@ -3,6 +3,11 @@ include::include.adoc[]
 
 == 2.0-M5 (tbd)
 
+- Add new `displayName` via `INameable` for `SpecInfo`, `FeatureInfo`, and `IterationInfo`.
+  This field can be set via extensions to change the reported name.
+  The existing iteration `NameProvider` now also sets the `displayName` instead of the `name`.
+  Modifying the `name` instead of `displayName` is now considered `deprecated` for extensions.
+
 == 2.0-M4 (2020-11-01)
 
 - *Added <<parallel_execution.adoc#parallel-execution,Parallel Execution>> support*
